# daily-weekly-build

./: README.md  af_cidr.txt  afroute.txt  as_cidr.txt  asroute.txt  clang4win.patch  cnroute.txt  de_cidr.txt  deroute.txt  es_cidr.txt  esroute.txt  eu_cidr.txt  euroute.txt  fr_cidr.txt  frroute.txt  gb_cidr.txt  gbroute.txt  hk_cidr.txt  hkroute.txt  it_cidr.txt  itroute.txt  jp_cidr.txt  jproute.txt  kr_cidr.txt  krroute.txt  na_cidr.txt  naroute.txt  nl_cidr.txt  nlroute.txt  oc_cidr.txt  ocroute.txt  ru_cidr.txt  ruroute.txt  sa_cidr.txt  saroute.txt  se_cidr.txt  seroute.txt  sg_cidr.txt  sgroute.txt  tw_cidr.txt  (+2 more)
.github/workflows/: cidr.yml  clang-for-windows-intel.yml  clang-for-windows.yml  crashpad.yml  echo.yml  ipset.yml  media-resolvers.yml  mpvbuild.yml  notepad2.yml  notepad4.yml  opengnb-darwin.yaml  opengnb-linux-arm64.yaml  opengnb-linux-mipsel.yaml  opengnb-linux-x86_64.yaml  opengnb-openwrt_arm64.yaml  opengnb-openwrt_mipsel.yaml  opengnb-openwrt_mipselsf.yaml  opengnb-openwrt_x86_64.yaml  opengnb-windows_x86_64.yaml  quiche.yml  windows.yml
android/include/: ci.sh  depinfo.sh  download-deps.sh
android/scripts/: dav1d.sh  freetype2.sh
ios/: build.sh  download.sh  wscript  wscript_build.py
ios/scripts/: ffmpeg-build  fribidi-build  harfbuzz-build  libass-build  mpv-build  uchardet-build
notepad2/: CMakeLists.txt  mingw.patch
notepad4/: CMakeLists.txt  EditView.cxx.patch  avx512.patch  benchmark.patch
